fix: scrollbars looking awful in safari

--- a/.vitepress/theme/styles.css
+++ b/.vitepress/theme/styles.css
@@ -16,7 +16,7 @@
 
 .dark {
 	--vp-c-brand-soft: #2d4022;
-	scrollbar-color: #76c945 #191919bb;
+	scrollbar-color: #76c945 var(--vp-c-bg);
 }
 
 .center {
@@ -54,17 +54,16 @@ i.center {
 
 /* Chrome, Edge, and Safari */
 html::-webkit-scrollbar, html *::-webkit-scrollbar {
-	width: 12px;
+	width: 8px;
 }
 
 html::-webkit-scrollbar-track, html *::-webkit-scrollbar-track {
-	background: #191919bb;
+	background: var(--vp-c-bg);
 }
 
 html::-webkit-scrollbar-thumb, html *::-webkit-scrollbar-thumb {
 	background-color: #76c945;
 	border-radius: 12px;
-	border: -1px solid #76c945;
 }
 
 /* home page */
